src/test/compile-fail/oversized-literal.rs
// error-pattern:literal out of range

fn main() { log 300u8; }
